@@ -118,7 +118,7 @@ public abstract class AbstractGraphSONMessageSerializerV2d0 extends AbstractMess
         } catch (Exception ex) {
             if (encodedMessage != null) ReferenceCountUtil.release(encodedMessage);
 
-            logger.warn("Response [{}] could not be serialized by {}.", responseMessage.toString(), AbstractGraphSONMessageSerializerV2d0.class.getName());
+            logger.warn(String.format("Response [%s] could not be serialized by %s.", responseMessage, AbstractGraphSONMessageSerializerV2d0.class.getName()), ex);
             throw new SerializationException(ex);
         }
     }
@@ -138,7 +138,7 @@ public abstract class AbstractGraphSONMessageSerializerV2d0 extends AbstractMess
         } catch (Exception ex) {
             if (encodedMessage != null) ReferenceCountUtil.release(encodedMessage);
 
-            logger.warn("Request [{}] could not be serialized by {}.", requestMessage.toString(), AbstractGraphSONMessageSerializerV2d0.class.getName());
+            logger.warn(String.format("Request [%s] could not be serialized by %s.", requestMessage, AbstractGraphSONMessageSerializerV2d0.class.getName()), ex);
             throw new SerializationException(ex);
         }
     }
@@ -150,7 +150,7 @@ public abstract class AbstractGraphSONMessageSerializerV2d0 extends AbstractMess
             msg.readBytes(payload);
             return mapper.readValue(payload, RequestMessage.class);
         } catch (Exception ex) {
-            logger.warn("Request [{}] could not be deserialized by {}.", msg, AbstractGraphSONMessageSerializerV2d0.class.getName());
+            logger.warn(String.format("Request [%s] could not be deserialized by %s.", msg, AbstractGraphSONMessageSerializerV2d0.class.getName()), ex);
             throw new SerializationException(ex);
         }
     }
@@ -162,7 +162,7 @@ public abstract class AbstractGraphSONMessageSerializerV2d0 extends AbstractMess
             msg.readBytes(payload);
             return mapper.readValue(payload, ResponseMessage.class);
         } catch (Exception ex) {
-            logger.warn("Response [{}] could not be deserialized by {}.", msg, AbstractGraphSONMessageSerializerV2d0.class.getName());
+            logger.warn(String.format("Response [%s] could not be deserialized by %s.", msg, AbstractGraphSONMessageSerializerV2d0.class.getName()), ex);
             throw new SerializationException(ex);
         }
     }
